--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ START: index.html
       <nav class="nav-desktop" aria-label="Primary">
         <a class="nav-link" href="./results.html">Results</a>
         <a class="nav-link" href="#how">How it works</a>
-        <a class="nav-link" href="#pricing">Pricing Covered</a>
+        <a class="nav-link" href="#pricing">Pricing</a>
         <a class="btn btn-primary" href="#book">Book a Call</a>
       </nav>
 
@@ -51,7 +51,7 @@ START: index.html
       <div class="container mobile-nav-inner">
         <a class="mobile-link" href="./results.html">Results</a>
         <a class="mobile-link" href="#how">How it works</a>
-        <a class="mobile-link" href="#pricing">Pricing Covered</a>
+        <a class="mobile-link" href="#pricing">Pricing</a>
         <a class="btn btn-primary btn-block mobile-cta" href="#book">Book a Call</a>
       </div>
     </div>
@@ -425,7 +425,7 @@ START: index.html
               <div class="foot-h">Pages</div>
               <a href="./index.html#how">How it works</a>
               <a href="./results.html">Results</a>
-              <a href="./index.html#pricing">Pricing Covered</a>
+              <a href="./index.html#pricing">Pricing</a>
               <a href="./index.html#book">Book</a>
             </div>
 
@@ -479,3 +479,4 @@ START: index.html
 <!-- =========================
 END: index.html
 ========================= -->
+
