--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@ START: index.html
   <meta name="description" content="ONIX installs a done-for-you acquisition + follow-up system that turns enquiries into booked calls — without chasing leads all day." />
 
   <!-- Cache-busted favicon -->
-  <link rel="icon" href="./logo2.png?v=20260112-02" />
+  <link rel="icon" href="./logo2.png?v=20260113-01" />
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
 
   <!-- Cache-busted CSS -->
-  <link rel="stylesheet" href="./styles.css?v=20260112-02">
+  <link rel="stylesheet" href="./styles.css?v=20260113-01">
 </head>
 
 <body>
@@ -37,7 +37,7 @@ START: index.html
       <nav class="nav-desktop" aria-label="Primary">
         <a class="nav-link" href="./results.html">Results</a>
         <a class="nav-link" href="#how">How it works</a>
-        <a class="nav-link" href="#pricing">Pricing</a>
+        <a class="nav-link" href="#pricing">Pricing Covered</a>
         <a class="btn btn-primary" href="#book">Book a Call</a>
       </nav>
 
@@ -51,7 +51,7 @@ START: index.html
       <div class="container mobile-nav-inner">
         <a class="mobile-link" href="./results.html">Results</a>
         <a class="mobile-link" href="#how">How it works</a>
-        <a class="mobile-link" href="#pricing">Pricing</a>
+        <a class="mobile-link" href="#pricing">Pricing Covered</a>
         <a class="btn btn-primary btn-block mobile-cta" href="#book">Book a Call</a>
       </div>
     </div>
@@ -243,6 +243,62 @@ START: index.html
       </div>
     </section>
 
+    <!-- VIDEO PROOF (NEW) -->
+    <section class="section watch-section" id="video-proof">
+      <div class="container">
+        <div class="section-head reveal">
+          <div class="eyebrow">VIDEO PROOF</div>
+          <h2 class="h2">Real conversations. Real results.</h2>
+          <p class="p">Short clips from actual client threads — nothing staged. (If a video is missing, the layout won’t break.)</p>
+        </div>
+
+        <div class="video-grid">
+          <!-- NOTE: filenames include spaces + parentheses, so we percent-encode -->
+          <figure class="video-card glass reveal">
+            <video class="vid" controls playsinline preload="metadata" data-video
+              src="./WhatsApp%20Video%202026-01-13%20at%2004.54.07.mp4"></video>
+            <figcaption class="video-cap">Client proof clip 01</figcaption>
+            <div class="video-fallback">Video unavailable</div>
+          </figure>
+
+          <figure class="video-card glass reveal" style="--d:90ms">
+            <video class="vid" controls playsinline preload="metadata" data-video
+              src="./WhatsApp%20Video%202026-01-13%20at%2004.54.10%20(1).mp4"></video>
+            <figcaption class="video-cap">Client proof clip 02</figcaption>
+            <div class="video-fallback">Video unavailable</div>
+          </figure>
+
+          <figure class="video-card glass reveal" style="--d:160ms">
+            <video class="vid" controls playsinline preload="metadata" data-video
+              src="./WhatsApp%20Video%202026-01-13%20at%2004.54.10%20(2).mp4"></video>
+            <figcaption class="video-cap">Client proof clip 03</figcaption>
+            <div class="video-fallback">Video unavailable</div>
+          </figure>
+
+          <figure class="video-card glass reveal" style="--d:230ms">
+            <video class="vid" controls playsinline preload="metadata" data-video
+              src="./WhatsApp%20Video%202026-01-13%20at%2004.54.10.mp4"></video>
+            <figcaption class="video-cap">Client proof clip 04</figcaption>
+            <div class="video-fallback">Video unavailable</div>
+          </figure>
+
+          <figure class="video-card glass reveal" style="--d:300ms">
+            <video class="vid" controls playsinline preload="metadata" data-video
+              src="./WhatsApp%20Video%202026-01-13%20at%2004.54.11%20(1).mp4"></video>
+            <figcaption class="video-cap">Client proof clip 05</figcaption>
+            <div class="video-fallback">Video unavailable</div>
+          </figure>
+
+          <figure class="video-card glass reveal" style="--d:370ms">
+            <video class="vid" controls playsinline preload="metadata" data-video
+              src="./WhatsApp%20Video%202026-01-13%20at%2004.54.11.mp4"></video>
+            <figcaption class="video-cap">Client proof clip 06</figcaption>
+            <div class="video-fallback">Video unavailable</div>
+          </figure>
+        </div>
+      </div>
+    </section>
+
     <!-- HOW IT WORKS -->
     <section class="section watch-section" id="how">
       <div class="container">
@@ -282,8 +338,6 @@ START: index.html
               <article class="engine-card glass reveal is-active" data-card="0">
                 <h3>Capture</h3>
                 <p>High-intent landing + form flow that makes it easy to raise a hand and request a quote/call.</p>
-
-                <!-- NEW: points animate on scroll -->
                 <ul class="engine-points points-on-scroll" data-points>
                   <li class="engine-point">Fast page load</li>
                   <li class="engine-point">Clear CTA</li>
@@ -294,7 +348,6 @@ START: index.html
               <article class="engine-card glass reveal" data-card="1">
                 <h3>Respond</h3>
                 <p>Instant SMS/email response that qualifies leads and reduces “cold form fills”.</p>
-
                 <ul class="engine-points points-on-scroll" data-points>
                   <li class="engine-point">Speed to lead</li>
                   <li class="engine-point">Simple qualification</li>
@@ -305,7 +358,6 @@ START: index.html
               <article class="engine-card glass reveal" data-card="2">
                 <h3>Nurture</h3>
                 <p>Follow-up sequences that feel human — built around what prospects care about.</p>
-
                 <ul class="engine-points points-on-scroll" data-points>
                   <li class="engine-point">Personalised sequences</li>
                   <li class="engine-point">Timing windows</li>
@@ -316,7 +368,6 @@ START: index.html
               <article class="engine-card glass reveal" data-card="3">
                 <h3>Book</h3>
                 <p>Booked calls without chasing — prospects choose a time, you show up prepared.</p>
-
                 <ul class="engine-points points-on-scroll" data-points>
                   <li class="engine-point">Calendly / routing</li>
                   <li class="engine-point">Confirmations + reminders</li>
@@ -389,8 +440,6 @@ START: index.html
               <span class="sep">•</span>
               <a href="./cookies.html">Cookies</a>
             </div>
-
-            <!-- Intake form removed -->
           </div>
 
           <div class="book-right embed-wrap">
@@ -425,7 +474,7 @@ START: index.html
               <div class="foot-h">Pages</div>
               <a href="./index.html#how">How it works</a>
               <a href="./results.html">Results</a>
-              <a href="./index.html#pricing">Pricing</a>
+              <a href="./index.html#pricing">Pricing Covered</a>
               <a href="./index.html#book">Book</a>
             </div>
 
@@ -456,8 +505,6 @@ START: index.html
     </footer>
   </main>
 
-  <!-- Intake Modal removed -->
-
   <!-- Cookie Banner -->
   <div class="cookie" id="cookieBanner" hidden>
     <div class="cookie-card glass">
@@ -473,10 +520,9 @@ START: index.html
   </div>
 
   <!-- Cache-busted JS -->
-  <script src="./script.js?v=20260112-02" defer></script>
+  <script src="./script.js?v=20260113-01" defer></script>
 </body>
 </html>
 <!-- =========================
 END: index.html
 ========================= -->
-
