--- a/cookies.html
+++ b/cookies.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Cookie Policy — Acquisition Engine</title>
 
-  <link rel="stylesheet" href="./styles.css?v=20260112-02">
+  <link rel="stylesheet" href="./styles.css?v=20260113-03">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -109,9 +109,9 @@
     </div>
   </footer>
 
-<script src="./script.js?v=20260112-02" defer></script>
-</body>
+<script src="./script.js?v=20260113-03" defer></script></body>
 </html>
+
 
 
 
