--- a/results.html
+++ b/results.html
@@ -15,7 +15,7 @@ START: results.html
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="./styles.css?v=20260113-02">
+  <link rel="stylesheet" href="./styles.css?v=20260113-03">
 </head>
 
 <body>
@@ -271,8 +271,7 @@ START: results.html
     </footer>
   </main>
 
-  <script src="./script.js?v=20260113-02" defer></script>
-</body>
+<script src="./script.js?v=20260113-03" defer></script></body>
 </html>
 <!-- =========================
 END: results.html
