--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@ START: index.html
   <title>ONIX — Your pipeline, on autopilot</title>
   <meta name="description" content="ONIX installs a done-for-you acquisition + follow-up system that turns enquiries into booked calls — without chasing leads all day." />
 
-  <link rel="icon" href="./logo2.png?v=20260113-02" />
+  <link rel="icon" href="./logo2.png" />
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="./styles.css?v=20260113-03">
+  <!-- cache-busted -->
+  <link rel="stylesheet" href="./styles.css?v=20260113-01">
 </head>
 
 <body>
@@ -172,6 +173,69 @@ START: index.html
       </div>
     </section>
 
+    <!-- VIDEO PROOF -->
+    <section class="section watch-section" id="video-proof">
+      <div class="container">
+        <div class="section-head reveal">
+          <div class="eyebrow">VIDEO PROOF</div>
+          <h2 class="h2">Real conversations. Real results.</h2>
+          <p class="p">Short clips from actual client threads — nothing staged.</p>
+        </div>
+
+        <div class="video-strip reveal">
+          <div class="video-track" aria-label="Client proof videos">
+            <figure class="video-card glass">
+              <video class="video" controls playsinline preload="metadata">
+                <source src="./WhatsApp%20Video%202026-01-13%20at%2004.54.07.mp4" type="video/mp4">
+              </video>
+              <figcaption class="video-cap">Client proof clip 01</figcaption>
+              <div class="video-fallback" hidden>Video unavailable</div>
+            </figure>
+
+            <figure class="video-card glass">
+              <video class="video" controls playsinline preload="metadata">
+                <source src="./WhatsApp%20Video%202026-01-13%20at%2004.54.10.mp4" type="video/mp4">
+              </video>
+              <figcaption class="video-cap">Client proof clip 02</figcaption>
+              <div class="video-fallback" hidden>Video unavailable</div>
+            </figure>
+
+            <figure class="video-card glass">
+              <video class="video" controls playsinline preload="metadata">
+                <source src="./WhatsApp%20Video%202026-01-13%20at%2004.54.10%20(1).mp4" type="video/mp4">
+              </video>
+              <figcaption class="video-cap">Client proof clip 03</figcaption>
+              <div class="video-fallback" hidden>Video unavailable</div>
+            </figure>
+
+            <figure class="video-card glass">
+              <video class="video" controls playsinline preload="metadata">
+                <source src="./WhatsApp%20Video%202026-01-13%20at%2004.54.10%20(2).mp4" type="video/mp4">
+              </video>
+              <figcaption class="video-cap">Client proof clip 04</figcaption>
+              <div class="video-fallback" hidden>Video unavailable</div>
+            </figure>
+
+            <figure class="video-card glass">
+              <video class="video" controls playsinline preload="metadata">
+                <source src="./WhatsApp%20Video%202026-01-13%20at%2004.54.11.mp4" type="video/mp4">
+              </video>
+              <figcaption class="video-cap">Client proof clip 05</figcaption>
+              <div class="video-fallback" hidden>Video unavailable</div>
+            </figure>
+
+            <figure class="video-card glass">
+              <video class="video" controls playsinline preload="metadata">
+                <source src="./WhatsApp%20Video%202026-01-13%20at%2004.54.11%20(1).mp4" type="video/mp4">
+              </video>
+              <figcaption class="video-cap">Client proof clip 06</figcaption>
+              <div class="video-fallback" hidden>Video unavailable</div>
+            </figure>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- OUTCOMES -->
     <section class="section watch-section" id="outcomes">
       <div class="container">
@@ -241,63 +305,6 @@ START: index.html
       </div>
     </section>
 
-    <!-- VIDEO PROOF (HORIZONTAL) -->
-    <section class="section watch-section" id="video-proof">
-      <div class="container">
-        <div class="section-head reveal">
-          <div class="eyebrow">VIDEO PROOF</div>
-          <h2 class="h2">Real conversations. Real results.</h2>
-          <p class="p">Short clips from actual client threads — nothing staged.</p>
-        </div>
-
-        <div class="video-strip reveal">
-          <div class="video-track" aria-label="Proof videos">
-            <figure class="video-card glass">
-              <video class="vid" controls playsinline preload="metadata" data-video
-                src="./WhatsApp%20Video%202026-01-13%20at%2004.54.07.mp4"></video>
-              <figcaption class="video-cap">Client proof clip 01</figcaption>
-              <div class="video-fallback">Video unavailable</div>
-            </figure>
-
-            <figure class="video-card glass">
-              <video class="vid" controls playsinline preload="metadata" data-video
-                src="./WhatsApp%20Video%202026-01-13%20at%2004.54.10%20(1).mp4"></video>
-              <figcaption class="video-cap">Client proof clip 02</figcaption>
-              <div class="video-fallback">Video unavailable</div>
-            </figure>
-
-            <figure class="video-card glass">
-              <video class="vid" controls playsinline preload="metadata" data-video
-                src="./WhatsApp%20Video%202026-01-13%20at%2004.54.10%20(2).mp4"></video>
-              <figcaption class="video-cap">Client proof clip 03</figcaption>
-              <div class="video-fallback">Video unavailable</div>
-            </figure>
-
-            <figure class="video-card glass">
-              <video class="vid" controls playsinline preload="metadata" data-video
-                src="./WhatsApp%20Video%202026-01-13%20at%2004.54.10.mp4"></video>
-              <figcaption class="video-cap">Client proof clip 04</figcaption>
-              <div class="video-fallback">Video unavailable</div>
-            </figure>
-
-            <figure class="video-card glass">
-              <video class="vid" controls playsinline preload="metadata" data-video
-                src="./WhatsApp%20Video%202026-01-13%20at%2004.54.11%20(1).mp4"></video>
-              <figcaption class="video-cap">Client proof clip 05</figcaption>
-              <div class="video-fallback">Video unavailable</div>
-            </figure>
-
-            <figure class="video-card glass">
-              <video class="vid" controls playsinline preload="metadata" data-video
-                src="./WhatsApp%20Video%202026-01-13%20at%2004.54.11.mp4"></video>
-              <figcaption class="video-cap">Client proof clip 06</figcaption>
-              <div class="video-fallback">Video unavailable</div>
-            </figure>
-          </div>
-        </div>
-      </div>
-    </section>
-
     <!-- HOW IT WORKS -->
     <section class="section watch-section" id="how">
       <div class="container">
@@ -333,6 +340,7 @@ START: index.html
 
           <div class="engine-right">
             <div class="engine-cards">
+
               <article class="engine-card glass reveal is-active" data-card="0">
                 <h3>Capture</h3>
                 <p>High-intent landing + form flow that makes it easy to raise a hand and request a quote/call.</p>
@@ -372,18 +380,19 @@ START: index.html
                   <li class="engine-point">No-show reduction</li>
                 </ul>
               </article>
+
             </div>
           </div>
         </div>
       </div>
     </section>
 
-    <!-- PRICING (renamed) -->
+    <!-- PRICING -->
     <section class="section watch-section" id="pricing">
       <div class="container">
         <div class="section-head reveal">
           <div class="eyebrow">PRICING</div>
-          <h2 class="h2">Pricing.</h2>
+          <h2 class="h2">Pricing is covered on the call.</h2>
           <p class="p">We don’t sell packages that don’t fit. We’ll map your needs, then recommend the right build.</p>
         </div>
 
@@ -445,6 +454,7 @@ START: index.html
               title="Calendly booking"
               src="https://calendly.com/jordan-burkett/my-reno-quotes-get-more-jobs-clone-clone?back=1&month=2026-01"
               loading="lazy"
+              allow="fullscreen"
               referrerpolicy="no-referrer-when-downgrade"
             ></iframe>
           </div>
@@ -516,10 +526,10 @@ START: index.html
     </div>
   </div>
 
-  <script src="./script.js?v=20260113-03" defer></script>
+  <!-- cache-busted -->
+  <script src="./script.js?v=20260113-01" defer></script>
 </body>
 </html>
 <!-- =========================
 END: index.html
 ========================= -->
-
