--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ START: index.html
           <div class="video-track" aria-label="Client proof videos">
             <figure class="video-card glass">
               <video class="video" controls playsinline preload="metadata">
-                <source src="./WhatsApp%20Video%202026-01-13%20at%2004.54.07.mp4" type="video/mp4">
+                <source src="./clip-01.mp4" type="video/mp4">
               </video>
               <figcaption class="video-cap">Client proof clip 01</figcaption>
               <div class="video-fallback" hidden>Video unavailable</div>
@@ -194,7 +194,7 @@ START: index.html
 
             <figure class="video-card glass">
               <video class="video" controls playsinline preload="metadata">
-                <source src="./WhatsApp%20Video%202026-01-13%20at%2004.54.10.mp4" type="video/mp4">
+                <source src="./clip-02.mp4" type="video/mp4">
               </video>
               <figcaption class="video-cap">Client proof clip 02</figcaption>
               <div class="video-fallback" hidden>Video unavailable</div>
@@ -202,7 +202,7 @@ START: index.html
 
             <figure class="video-card glass">
               <video class="video" controls playsinline preload="metadata">
-                <source src="./WhatsApp%20Video%202026-01-13%20at%2004.54.10%20(1).mp4" type="video/mp4">
+                <source src="./clip-03.mp4" type="video/mp4">
               </video>
               <figcaption class="video-cap">Client proof clip 03</figcaption>
               <div class="video-fallback" hidden>Video unavailable</div>
@@ -210,7 +210,7 @@ START: index.html
 
             <figure class="video-card glass">
               <video class="video" controls playsinline preload="metadata">
-                <source src="./WhatsApp%20Video%202026-01-13%20at%2004.54.10%20(2).mp4" type="video/mp4">
+                <source src="./clip-04.mp4" type="video/mp4">
               </video>
               <figcaption class="video-cap">Client proof clip 04</figcaption>
               <div class="video-fallback" hidden>Video unavailable</div>
@@ -218,7 +218,7 @@ START: index.html
 
             <figure class="video-card glass">
               <video class="video" controls playsinline preload="metadata">
-                <source src="./WhatsApp%20Video%202026-01-13%20at%2004.54.11.mp4" type="video/mp4">
+                <source src="./clip-05.mp4" type="video/mp4">
               </video>
               <figcaption class="video-cap">Client proof clip 05</figcaption>
               <div class="video-fallback" hidden>Video unavailable</div>
@@ -226,7 +226,7 @@ START: index.html
 
             <figure class="video-card glass">
               <video class="video" controls playsinline preload="metadata">
-                <source src="./WhatsApp%20Video%202026-01-13%20at%2004.54.11%20(1).mp4" type="video/mp4">
+                <source src="./clip-06.mp4" type="video/mp4">
               </video>
               <figcaption class="video-cap">Client proof clip 06</figcaption>
               <div class="video-fallback" hidden>Video unavailable</div>
@@ -533,4 +533,5 @@ START: index.html
 <!-- =========================
 END: index.html
 ========================= -->
+
 
